--- a/app/views/factories/index.html.erb
+++ b/app/views/factories/index.html.erb
@@ -18,7 +18,13 @@
         <th><%= t('brand.discount') %></th>
         <th><%= t('brand.additional_discount') %></th>
         <th><%= t('brand.delivery_terms') %></th>
+        <th><%= t('brand.minimum_order') %></th>
+        <th><%= t('brand.delivery_time') %></th>
+        <th><%= t('brand.light_factor') %></th>
+        <th><%= t('brand.delivery_time') %></th>
+        <th><%= t('brand.group_brend') %></th>
         <th><%= t('brand.note') %></th>
+        <th><%=  %></th>
     </tr>
     </thead>
     <tbody id="factories">
