--- a/app/views/factories/update.js.erb
+++ b/app/views/factories/update.js.erb
@@ -1,2 +1,2 @@
 $('#dialog').modal('toggle');
-$('#factory_<%= @factory.id %>').replaceWith('<%= j render (@factory_) %>')
+$('#factory_<%= @factory.id %>').replaceWith('<%= j render (@factory) %>')
