--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,5 @@
 <tr id="project_<%= project.id %>">
+  <td><%= project.user.name %></td>
   <td><%= project.user.email %></td>
   <td><%= link_to project.object_name, project %></td>
   <td><%= project.city.name %></td>
@@ -7,20 +8,20 @@
   <td><%= project.type_furniture %></td>
   <td><%= project.created_at %></td>
   <% if project.status != @last_status %>
-    <td><%= link_to project.status, new_project_status_path(project) %></td>  
+    <td><%= link_to project.status, new_project_status_path(project), remote: true %></td>  
   <% else %>
     <td><%= project.status %></td>
   <% end %>
   <td><%= project.status_description %></td>
   <td><%= project.deadline %></td>
-  <td><%= project.planned_budget %></td>
-  <td><%= project.date_delivery_client %></td>
-  <td><%= project.amount_contract %></td>
+  <td><%= best_in_place [project], :planned_budget %></td>
+  <td class="datapic"><input name="<%= project.id %>" data-attribute="date_delivery_client" value="<%= project.date_delivery_client%>" class="form-control" id="dp_<%= project.id %>" /></td>
+  <td><%= best_in_place [project], :amount_contract %></td>
   <td><%= Project::sum_specifications(project.specifications) %></td>
-  <td><%= project.client_prepayment %></td>
-  <td><%= project.client_surcharge %></td>
-  <td><%= project.status_transaction %></td>
-  <td><%= project.delivery_status %></td>
+  <td><%= best_in_place [project], :client_prepayment %></td>
+  <td><%= best_in_place [project], :client_surcharge %></td>
+  <td><%= best_in_place [project], :status_transaction %></td>
+  <td><%= best_in_place [project], :delivery_status %></td>
 
   <td>
 
