--- a/app/views/specifications/_specification.html.erb
+++ b/app/views/specifications/_specification.html.erb
@@ -1,24 +1,20 @@
 <tr id="specification_<%= specification.id %>">
-  
   <% if specification.light %>
   <td><%= link_to specification.name, project_specification_table_specification_lights_path(@project, specification), 'data-no-turbolink' => true %></td>
-  
-  <td><%= check_box("print", "sum", {checked: false}, "sit") %></td>
-  <td><%= TableSpecification::specification_sum_all(specification) %></td>
+  <td><%= check_box("print_sum", "#{specification.id}", {checked:  specification.print_sum}, "specification") %></td>
+  <td><%= TableSpecificationLight::specification_sum_all(specification) %></td>
   <td>
     <%= link_to t('edit'), edit_project_specification_path(@project, specification), remote: true, :class => 'btn btn-sm btn-info' %>
     <%= link_to t('delete'), project_specification_path(@project, specification), remote: true, :method => :delete, data: {confirm: "Delete Customer: #{specification.name}"}, :class => 'btn btn-sm btn-danger' %>
   </td>
   <% else %>
   <td><%= link_to specification.name, project_specification_table_specifications_path(@project, specification), 'data-no-turbolink' => true %></td>
-  
-  <td><%= check_box("print", "sum", {checked: false}, "sit") %></td>
+  <td><%= check_box("print", "#{specification.id}", {checked: specification.print_sum}, "specification") %></td>
   <td><%= TableSpecification::specification_sum_all(specification) %></td>
   <td>
     <%= link_to t('edit'), edit_project_specification_path(@project, specification), remote: true, :class => 'btn btn-sm btn-info' %>
     <%= link_to t('delete'), project_specification_path(@project, specification), remote: true, :method => :delete, data: {confirm: "Delete Customer: #{specification.name}"}, :class => 'btn btn-sm btn-danger' %>
   </td>
   <% end %>
-
 </tr>
 
