--- a/app/views/styles/_form.html.erb
+++ b/app/views/styles/_form.html.erb
@@ -1,21 +1,15 @@
-<%= form_for(@style) do |f| %>
-  <% if @style.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@style.errors.count, "error") %> prohibited this style from being saved:</h2>
-
-      <ul>
-      <% @style.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= form_for(@style, remote: true, :html => { :role => "form" }) do |f| %>
+<div id="error_explanation" class="bg-danger text-danger">
+</div>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="form-group">
+      <%= f.label :name, :class => "control-label" %><br>
+      <%= f.text_field :name, :class => "form-control"  %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <div class="form-group">
+      <%= f.submit  @style.new_record? ? "Create" : "Update", :class => "btn btn-primary" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+</div>
 <% end %>
