--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -1,21 +1,15 @@
-<%= form_for(@city) do |f| %>
-  <% if @city.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@city.errors.count, "error") %> prohibited this city from being saved:</h2>
-
-      <ul>
-      <% @city.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= form_for(@city, remote: true, :html => { :role => "form" }) do |f| %>
+<div id="error_explanation" class="bg-danger text-danger">
+</div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+      <%= f.label :name %><br>
+      <%= f.text_field :name, :class => "form-control" %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <div class="actions">
+      <%= f.submit  @city.new_record? ? "Create City" : "Update City", :class => "btn btn-primary" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+</div>
 <% end %>
