--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,27 +1,21 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Cities</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @cities.each do |city| %>
+  <h2>Listing Cities</h2>
+  <div class="well">
+    <%= link_to 'New City', new_city_path, remote: true, class: "btn btn-primary" %>
+  </div>
+  <table class="table table-bordered table-striped">
+    <thead>
       <tr>
-        <td><%= city.name %></td>
-        <td><%= link_to 'Show', city %></td>
-        <td><%= link_to 'Edit', edit_city_path(city) %></td>
-        <td><%= link_to 'Destroy', city, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New City', new_city_path %>
+    <tbody id="cities">
+      <%= render @cities%>
+    </tbody>
+  </table>
+  <%= render 'dialog' %>
+</div>
