--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,38 +1,33 @@
-<%= form_for(@client) do |f| %>
-  <% if @client.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@client.errors.count, "error") %> prohibited this client from being saved:</h2>
+<%= form_for(@client, remote: true, :html => { :role => "form" }) do |f| %>
+<div id="error_explanation" class="bg-danger text-danger">
+</div>
+ 
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+        <%= f.label :name %><br>
+        <%= f.text_field :name, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :company %><br>
+        <%= f.collection_select :company_id, Company.order(:name),:id,:name, {include_blank: true}, {class: :"form-control"} %>
+      </div>
+      <div class="form-group">
+        <%= f.label :status_position %><br>
+        <%= f.text_field :status_position, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :telephone %><br>
+        <%= f.number_field :telephone, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :email %><br>
+        <%= f.email_field :email, :class => "form-control" %>
+      </div>
 
-      <ul>
-      <% @client.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+      <div class="actions">
+        <%= f.submit  @client.new_record? ? "Create Client" : "Update Client", :class => "btn btn-primary" %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :company %><br>
-    <%= f.collection_select :company_id, Company.order(:name),:id,:name, include_blank: true %>
-  </div>
-  <div class="field">
-    <%= f.label :status_position %><br>
-    <%= f.text_field :status_position %>
-  </div>
-  <div class="field">
-    <%= f.label :telephone %><br>
-    <%= f.text_field :telephone %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
   </div>
 <% end %>
