--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,37 +1,28 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Clients</h1>
+  <h2>Listing Clients</h2>
+  <div class="well">
+    <%= link_to 'New Client', new_client_path, remote: true, class: "btn btn-primary" %>
+  </div>
+  <div class="new-client"></div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Company</th>
-      <th>Status position</th>
-      <th>Telephone</th>
-      <th>Email</th>
-      <th>Address</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @clients.each do |client| %>
+  <table class="table table-bordered table-striped">
+    <thead>
       <tr>
-        <td><%= client.name %></td>
-        <td><%= client.company.name %></td>
-        <td><%= client.status_position %></td>
-        <td><%= client.telephone %></td>
-        <td><%= client.email %></td>
-        <td><%= client.company.address %></td>
-        <td><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Company</th>
+        <th>Status position</th>
+        <th>Telephone</th>
+        <th>Email</th>
+        <th>Address</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Client', new_client_path %>
+    <tbody id="clients">
+    <%= render @clients%>
+    </tbody>
+  </table>
+  <%= render "dialog" %>
+</div>
