--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,25 +1,21 @@
-<%= form_for(@company) do |f| %>
-  <% if @company.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@company.errors.count, "error") %> prohibited this company from being saved:</h2>
-
-      <ul>
-      <% @company.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= form_for(@company, remote: true, :html => { :role => "form" }) do |f| %>
+<div id="error_explanation" class="bg-danger text-danger">
+</div>
+ 
+  <div class="row">
+  <div class="col-sm-6">
+    <div class="form-group">
+      <%= f.label :name, :class => "control-label" %><br>
+      <%= f.text_field :name, :class => "form-control" %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+    <div class="form-group">
+      <%= f.label :address, :class => "control-label" %><br>
+      <%= f.text_field :address, :class => "form-control" %>
+    </div>
+    <div class="actions">
+      <%= f.submit  @company.new_record? ? "Create Company" : "Update Company", :class => "btn btn-primary" %>
+      </div>
+  
+    </div>
   </div>
 <% end %>
