--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@delivery) do |f| %>
+<%= form_for(@delivery, remote: true, :html => { :role => "form" }) do |f| %>
   <% if @delivery.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@delivery.errors.count, "error") %> prohibited this delivery from being saved:</h2>
@@ -10,32 +10,35 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :direction %><br>
-    <%= f.text_field :direction %>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+       <%= f.label :direction, :class => "control-label" %><br>
+       <%= f.text_field :direction, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :cost, :class => "control-label" %><br>
+        <%= f.number_field :cost, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :execution_documen, :class => "control-label" %><br>
+        <%= f.number_field :execution_document, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :check_factory, :class => "control-label" %><br>
+        <%= f.number_field :check_factory, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :bank_service, :class => "control-label" %><br>
+        <%= f.number_field :bank_service, :class => "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :bank_percent, :class => "control-label" %><br>
+        <%= f.number_field :bank_percent, step: 0.1, :class => "form-control" %>
+      </div>
+      <div class="actions">
+        <%= f.submit  @delivery.new_record? ? "Create Delivery" : "Update Delivery", :class => "btn btn-primary" %>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :cost %><br>
-    <%= f.number_field :cost %>
-  </div>
-  <div class="field">
-    <%= f.label :execution_document %><br>
-    <%= f.number_field :execution_document %>
-  </div>
-  <div class="field">
-    <%= f.label :check_factory %><br>
-    <%= f.number_field :check_factory %>
-  </div>
-  <div class="field">
-    <%= f.label :bank_service %><br>
-    <%= f.number_field :bank_service %>
-  </div>
-  <div class="field">
-    <%= f.label :bank_percent %><br>
-    <%= f.number_field :bank_percent, step: 0.1 %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+  <% end %>
