--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -1,8 +1,12 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
+<h2>Listing Deliveries</h2>
 
-<h1>Listing Deliveries</h1>
+<div class="well">
+  <%= link_to 'New Delivery', new_delivery_path, remote: true, class: "btn btn-primary" %>
+</div>
 
-<table>
+<table id class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Direction</th>
@@ -15,23 +19,9 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @deliveries.each do |delivery| %>
-      <tr>
-        <td><%= delivery.direction %></td>
-        <td><%= delivery.cost %></td>
-        <td><%= delivery.execution_document %></td>
-        <td><%= delivery.check_factory %></td>
-        <td><%= delivery.bank_service %></td>
-        <td><%= delivery.bank_percent %></td>
-        <td><%= link_to 'Show', delivery %></td>
-        <td><%= link_to 'Edit', edit_delivery_path(delivery) %></td>
-        <td><%= link_to 'Destroy', delivery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tbody id="deliveries">
+    <%= render @deliveries %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Delivery', new_delivery_path %>
+<%= render 'dialog' %>
+</div>
