--- a/app/views/factories/_form.html.erb
+++ b/app/views/factories/_form.html.erb
@@ -53,7 +53,7 @@
     <%= f.nested_fields_for :discounts do |ff| %>
       <%= ff.remove_nested_fields_link %>
       
-      <%= ff.text_field :percent %>
+      <%= ff.text_field :percent, :class => "form-control"  %>
     <% end %>
     <%= f.add_nested_fields_link :discounts %>
   </div>
@@ -84,9 +84,6 @@
     <%= f.submit  @factory.new_record? ? "Create Factory" : "Update Factory", :class => "btn btn-primary" %>
   </div>
   </div>
-
-
-
 </div>
 </div>
 </div>
