--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,27 +1,27 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Article</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
+  <h2><%= t('products.products') %></h2>
+  <div class="well">
+    <%= link_to t('products.new_product'), new_product_path, remote: true, class: "btn btn-primary" %>
+  </div>
+  <div class="new-product"></div>
+  <table class="table table-bordered table-striped table-hover">
+    <thead>
       <tr>
-        <td><%= product.article %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th><%= link_to t('products.article') %></th>
+        <th><%= link_to t('type_furnitures.type_furniture') %></th>
+        <th><%= link_to t('factories.factory') %></th>
+        <th><%= link_to t('products.price') %></th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody id="products">
+      <%= render @products %>      
+    </tbody>
+  </table>
 
-<%= link_to 'New Product', new_product_path %>
+  <br>
+  <%= render 'dialog' %>
+</div>
