--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,17 +12,17 @@
   
   <div class="form-group">
     <%= f.label t('project.style'), :class => "control-label" %>
-    <%= f.collection_select :style_id, Style.order(:name),:id,:name, include_blank: true %>
+    <%= f.collection_select :style_id, Style.order(:name),:id,:name, {include_blank: true}, {class: :"form-control"} %>
   </div>
 
   <div class="form-group">
     <%= f.label t('client.name'), :class => "control-label" %>
-    <%= f.collection_select :client_id, Client.order(:name),:id,:name, include_blank: true %>
+    <%= f.collection_select :client_id, Client.order(:name),:id,:name, {include_blank: true}, {class: :"form-control"} %>
   </div>
 
   <div class="form-group">
     <%= f.label t('project.city'), :class => "control-label" %>
-    <%= f.collection_select :city_id, City.order(:name),:id,:name, include_blank: true %>
+    <%= f.collection_select :city_id, City.order(:name),:id,:name, {include_blank: true}, {class: :"form-control"} %>
   </div>
 
   <div class="form-group">
