--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,27 +1,23 @@
+<div class="container"> 
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Styles</h1>
+<h2><%= t('styles') %></h2>
+  <div class="well">
+    <%= link_to t('product.new_product'), new_style_path, remote: true, class: "btn btn-primary" %>
+  </div>
+  <div class="new-style"></div>
 
-<table>
+<table class="table table-bordered table-striped table-hover">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
-  <tbody>
-    <% @styles.each do |style| %>
-      <tr>
-        <td><%= style.name %></td>
-        <td><%= link_to 'Show', style %></td>
-        <td><%= link_to 'Edit', edit_style_path(style) %></td>
-        <td><%= link_to 'Destroy', style, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tbody id="styles">
+      <%= render @styles %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Style', new_style_path %>
+<%= render 'dialog' %>
+</div>
