--- a/app/views/table_specification_lights/index.html.erb
+++ b/app/views/table_specification_lights/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "table_specification_lights/index" %>
 <div class="container-fluid">
   <p id="notice"><%= notice %></p>
   <%= link_to t('table.print_pdf'), project_specification_table_specification_lights_path(@project, @specification, @table_specification_light, format: "pdf") %>
