--- a/app/views/table_specifications/index.html.erb
+++ b/app/views/table_specifications/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "table_specifications/index" %>
 <div class="container-fluid">
   <p id="notice"><%= notice %></p>
   <%= link_to t('table.print_pdf'), project_specification_table_specifications_path(@project, @specification, @table_specification, format: "pdf") %>
