--- a/app/views/type_furnitures/index.html.erb
+++ b/app/views/type_furnitures/index.html.erb
@@ -1,27 +1,22 @@
-<p id="notice"><%= notice %></p>
+<div class="container"> 
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Type Furnitures</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @type_furnitures.each do |type_furniture| %>
+  <h2>Listing Type Furnitures</h2>
+  <div class="well">
+    <%= link_to 'New Type furniture', new_type_furniture_path, remote: true, class: "btn btn-primary" %>
+  </div>
+  <div class="new-type_furniture"></div>
+  <table class="table table-bordered table-striped table-hover">
+    <thead>
       <tr>
-        <td><%= type_furniture.name %></td>
-        <td><%= link_to 'Show', type_furniture %></td>
-        <td><%= link_to 'Edit', edit_type_furniture_path(type_furniture) %></td>
-        <td><%= link_to 'Destroy', type_furniture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Type furniture', new_type_furniture_path %>
+    <tbody id="type_furnitures">
+      <%= render @type_furnitures %>
+    </tbody>
+  </table>
+  <%= render 'dialog' %>
+</div>
