--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,42 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">PRO-DIZAAP</a>
+    </div>
 
-	<%if user_signed_in? %>
-	<p> Hello, <%= current_user.email %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
-	<br>
-	<% end %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to t('project.projects'), projects_path %></li>
+        <li><%= link_to t('products.products'), products_path %></li>
+        <li><%= link_to t('factories.factory'), factories_path %></li>
+    
+        <li><%= link_to t('styles'), styles_path %></li>
+        <li><%= link_to t('companies'), companies_path %></li>
+        <li><%= link_to t('clients.clients'), clients_path %></li>
+        <li><%= link_to t('cities'), cities_path %></li>
+        <li><%= link_to t('deliveries'), deliveries_path %></li>
+        <li><%= link_to t('type_furnitures.type_furniture'), type_furnitures_path %></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+  <%if user_signed_in? %>
+  <p> Hello, <%= current_user.email %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
+  <br>
+  <% end %>
 
 <%= yield %>
 
